--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,48 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 35vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+    animation-direction: alternate
   }
 }
 
+.par{
+  line-height: normal;
+}
+
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-style: italic;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.title{
+  font-size: calc(20px + 2vmin);
+}
+
+.button {
+  transition-duration: 0.4s;
+  background-color: black;
+  color:white;
+  border: 2px solid black; /* Green */
+  line-height: normal;
+}
+
+.button:hover {
+  background-color:white; /* Green */
+  color:black;
 }
 
 .App-link {
@@ -29,10 +52,8 @@
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  0%   {background-color: #282c34;}
+  50%  {background-color: white;}
+
 }
+
